frontend/test/should_fail/defYield_005e.grg
using defYield;

test t
{
	-y:EE->;
	pp:p(--- yield x, yield y);
---
	def -x:EE->;
}

pattern p(-x:EE-> --- def -z:EE->)
{
	-y:EE->;
---
	yield { yield x = y; }
}

